--- a/WebShop/Areas/Admin/Views/CoverType/Edit.cshtml
+++ b/WebShop/Areas/Admin/Views/CoverType/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebShop.Models.Category
+﻿@model WebShop.Models.CoverType
 
 @{
     ViewData["Title"] = "Edit";
@@ -18,16 +18,7 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DisplayOrder" class="control-label"></label>
-                <input asp-for="DisplayOrder" class="form-control" />
-                <span asp-validation-for="DisplayOrder" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedDateTime" class="control-label"></label>
-                <input asp-for="CreatedDateTime" class="form-control" />
-                <span asp-validation-for="CreatedDateTime" class="text-danger"></span>
-            </div>
+           
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
