[ Api ] some api modifications

--- a/WebShop/Areas/Admin/Views/Product/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/Product/Index.cshtml
@@ -42,11 +42,30 @@
             <th></th>
         </tr>
     </thead>
-   
+      <tbody>
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+               @Html.DisplayFor(modelItem => item.Title)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.ISBN)
+            </td> 
+            <td>
+                @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Author)
+            </td>
+                 
+        </tr>
+    }
+    </tbody>
 </table>
 </div>
 
 @section Scripts
 {
-    <script src ="~/js/product/product.js"></script>
+   @*<script src ="~/js/product/product.js"></script>*@
 }
