[ API ] - Moving Admin Controllers to Api

--- a/WebShop/Areas/Admin/Views/CoverType/Delete.cshtml
+++ b/WebShop/Areas/Admin/Views/CoverType/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebShop.Models.CoverType
+﻿@model WebShop.Models.CoverTypeModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Category</h4>
+    <h4>Cover Type</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
