--- a/WebShop/Areas/Admin/Views/CoverType/Details.cshtml
+++ b/WebShop/Areas/Admin/Views/CoverType/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebShop.Models.CoverType
+﻿@model WebShop.Models.CoverTypeModel
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Category</h4>
+    <h4>Cover Type</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
