--- a/WebShop/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/CoverType/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebShop.Models.CoverType>
+﻿@model IEnumerable<WebShop.Models.CoverTypeModel>
 
 @{
     ViewData["Title"] = "Index";
