--- a/WebShop/Areas/Admin/Views/Categories/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebShop.Models.Category>
+﻿@model IEnumerable<WebShop.Models.CategoryModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -43,18 +43,18 @@
             </td>
             <td class="row">
 
-                        <a asp-action="Edit" class="col-md-2 btn btn-success" asp-route-id="@item.Id">
+                        <a asp-action="Edit" class="col-md-3 btn btn-success" asp-route-id="@item.Id">
                          <i class="bi bi-pen"></i>
                          <br>
                          Edit
                         </a>
                           &nbsp;
-                        <a asp-action="Details" class="col-md-2 btn btn-primary" asp-route-id="@item.Id">
+                        <a asp-action="Details" class="col-md-3 btn btn-primary" asp-route-id="@item.Id">
                             <i class="bi bi-ui-checks-grid"></i>
                             Details
                         </a>
                         &nbsp;
-                        <a asp-action="Delete" class="col-md-2 btn btn-danger" asp-route-id="@item.Id">
+                        <a asp-action="Delete" class="col-md-3 btn btn-danger" asp-route-id="@item.Id">
                             <i class="bi bi-trash3"></i>
                             Delete
                         </a>
