--- a/WebShop/Areas/Admin/Views/Company/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/Company/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebShop.Models.Company>
+﻿@model IEnumerable<WebShop.Models.CompanyModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -43,42 +43,42 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-                    <td>
+        <tr class=" col-12">
+                    <td class="col-1">
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td class="col-1">
                         @Html.DisplayFor(modelItem => item.StreetAddress)
                     </td>
-                    <td>
+                    <td class="col-1">
                         @Html.DisplayFor(modelItem => item.City)
                     </td>
-                    <td>
+                    <td class="col-1">
                         @Html.DisplayFor(modelItem => item.State)
                     </td>
-                    <td>
+                    <td class="col-1">
                         @Html.DisplayFor(modelItem => item.PostalCode)
                     </td>
-                     <td>
+                    <td class="col-1">
                         @Html.DisplayFor(modelItem => item.PhoneNumber)
                     </td>
                 
           
          
-                        <td>
+                     <td class="col-2">
                         <a asp-action="Edit" class="btn btn-success" asp-route-id="@item.Id">
                          <i class="bi bi-pen"></i>
                          <br>
                          Edit
                         </a>
-                        </td>
-                       <td>
+                    </td>
+                     <td class="col-2">
                         <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">
                             <i class="bi bi-ui-checks-grid"></i>
                             Details
                         </a>
-                              </td>
-                       <td>
+                    </td>
+                     <td class="col-2">
                         <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">
                             <i class="bi bi-trash3"></i>
                             Delete
