--- a/WebShop/Areas/Consumer/Views/Cart/OrderConfirmation.cshtml
+++ b/WebShop/Areas/Consumer/Views/Cart/OrderConfirmation.cshtml
@@ -4,7 +4,10 @@
     <div class="col-12 text-center">
         <h1 class="text-primary text-center">Order Placed Successfully!</h1>
         Your Order Number is : @Model <br /><br />
-        <img src="~/images/like.png" width="65%" />
+             <div class=" mt-5" style="height: 560px;">
+   <div><i class="bi bi-check-circle" style="font-size:100px; color: green"></i></div>
+          <h2>Thank you. Your order is confirmed</h2>
+            <p class="mb-4">Your order is on the way</p>
     </div>
     <div class="col-12 text-center" style="color:maroon">
         <br />
